Confirmed Gluster Works Correctly with oVirt for Storage Domain

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -54,7 +54,7 @@ _gluster:
       insecure: "true"
   vms:
     rk9: [ "rk9-freeipa", "rk9-node01", "rk9-node02", "rk9-node03", "rk9-node04", "rk9-node05", "rk9-node06", "rk9-node07" ]
-    co9: [ "rk9-freeipa", "co9-node01", "co9-node02", "co9-node03", "co9-node04", "co9-node05", "co9-node06", "co9-node07" ]
+    co9: [ "rk9-freeipa", "co9-node01", "co9-node02", "co9-node03", "co9-node04", "co9-node05", "co9-node06", "co9-node07", "co9-node08" ]
     ubt24: [ "rk9-freeipa", "ubt24-node01", "ubt24-node02", "ubt24-node03", "ubt24-node04", "ubt24-node05" ]
 
 
