--- a/roles/ganesha/tasks/pkgs/enable-repo.yml
+++ b/roles/ganesha/tasks/pkgs/enable-repo.yml
@@ -1,7 +1,7 @@
 ---
 - name: Install Gluster NFS Ganesha Package Repository
   package:
-    name: "centos-release-nfs-ganesha4"
+    name: "centos-release-nfs-ganesha{{ _ganesha.ver }}"
     state: present
   register: install_repo_pkgs
 - debug: msg={{ install_repo_pkgs }}
@@ -16,13 +16,13 @@
     backup: "{{ item.backup }}"
   register: change_required_config
   with_items:
-    - { fn: "NFS-Ganesha-4",           regexp: "enabled=1",  line: "enabled=0",  backup: no }
+    - { fn: "NFS-Ganesha-{{ _ganesha.ver }}",           regexp: "enabled=1",  line: "enabled=0",  backup: no }
   # when: ansible_os_family == 'Rocky' and ansible_distribution_major_version|int == 9
 
 
 - name: Enable Gluster NFS Ganesha Repository
   shell: |
-    dnf config-manager --enable "centos-nfs-ganesha-4"
+    dnf config-manager --enable "centos-nfs-ganesha-{{ _ganesha.ver }}"
   register: enable_gluster_repo
 - debug: msg={{ enable_gluster_repo }}
   when: print_debug == true
