--- a/roles/ganesha/tasks/set-ganesha-facts.yml
+++ b/roles/ganesha/tasks/set-ganesha-facts.yml
@@ -21,12 +21,12 @@
     _ipaddr: "{{ ipaddr2 }}"
 
 
-#- name: Get Manager Manager IP Address
-#  set_fact:
-#    manager_ipaddr: "{{ hostvars[inventory_hostname][_netdev].ipv4.address }}"
-#  delegate_to: "{{ item }}"
-#  delegate_facts: true
-#  with_items: "{{ groups['all'] }}"
+- name: Get Manager Manager IP Address
+  set_fact:
+    manager_ipaddr: "{{ hostvars[inventory_hostname][_netdev].ipv4.address }}"
+  delegate_to: "{{ item }}"
+  delegate_facts: true
+  with_items: "{{ groups['all'] }}"
 
 
 - name: Define Gluster Version
