--- a/roles/gluster/tasks/volume/delete-volumes.yml
+++ b/roles/gluster/tasks/volume/delete-volumes.yml
@@ -43,9 +43,10 @@
 - debug: msg={{ confirm_volume_status }}
 
 
+#  path: "{{ item.brick }}"
 - name: Delete Directory
   file:
-    path: "{{ item.brick }}"
+    path: "/mnt/{{ item.name }}"
     state: absent
   register: delete_dir
   with_items: "{{ _volumes }}"
