--- a/roles/gluster/vars/main.yml
+++ b/roles/gluster/vars/main.yml
@@ -1,13 +1,13 @@
 ---
 _volumes:
-  - { name: "distvol01", brick: "/glusterfs/jbrick01", perf_cache_size: "128MB", wb: "off", qr: "on", mount_dir: "/mnt/distvol01", fn: "fs-text01.txt" }
-  - { name: "distvol02", brick: "/glusterfs/jbrick02", perf_cache_size: "128MB", wb: "off", qr: "on", mount_dir: "/mnt/distvol02", fn: "fs-text02.txt" }
-  - { name: "distvol03", brick: "/glusterfs/jbrick03", perf_cache_size: "128MB", wb: "off", qr: "on", mount_dir: "/mnt/distvol03", fn: "fs-text03.txt" }
+  - { name: "distvol01", brick: "/glusterfs/jbrick01,/glusterfs/jbrick02,/glusterfs/jbrick03", perf_cache_size: "128MB", wb: "off", qr: "on", mount_dir: "/mnt/distvol01", fn: "fs-text01.txt" }
+  - { name: "distvol02", brick: "/glusterfs/jbrick11,/glusterfs/jbrick12,/glusterfs/jbrick13", perf_cache_size: "128MB", wb: "off", qr: "on", mount_dir: "/mnt/distvol02", fn: "fs-text02.txt" }
+  - { name: "distvol03", brick: "/glusterfs/jbrick21,/glusterfs/jbrick22,/glusterfs/jbrick23", perf_cache_size: "128MB", wb: "off", qr: "on", mount_dir: "/mnt/distvol03", fn: "fs-text03.txt" }
 
 
 _volume_count:
   replica: 3
   arbiter: 1
-  disperse: 2
+  disperse: 3
   redundant: 1
 
