Working with Quota

--- a/roles/gluster/tasks/volume/main.yml
+++ b/roles/gluster/tasks/volume/main.yml
@@ -10,3 +10,9 @@
   tags: delete
   when: ( volume is defined and volume == true ) and inventory_hostname in groups['control']
 
+
+- name: Delete GlusterFS Volumes Quota
+  import_tasks: volume/enable-quota.yml
+  tags: enable
+  when: ( quota is defined and quota == true ) and inventory_hostname in groups['control']
+
