--- a/roles/gluster/tasks/volume/enable-quota.yml
+++ b/roles/gluster/tasks/volume/enable-quota.yml
@@ -1,9 +1,64 @@
 ---
-- name: Enable Create Gluster Volumes Quota
-  gluster_volume:
-    name: "{{ item.name }}"
-    state: present
-    directory: /
-    quota: "{{ item.quota }}"
+- name: Enable Gluster Volumns Quota
+  shell: |
+    gluster volume quota {{ item.name }} enable
+  register: enable_gluster_volumes_quota
   with_items: "{{ _volumes }}"
+- debug: msg={{ enable_gluster_volumes_quota }}
+
+
+- name: Display Gluster Volumns Quota Info
+  shell: |
+    gluster volume info
+  register: display_gluster_volumes_quota_info
+- debug: msg={{ display_gluster_volumes_quota_info }}
+
+
+- name: Set Gluster Volumns Quota
+  shell: |
+    gluster volume quota {{ item.name }} limit-usage / {{ item.quota }}
+  register: set_gluster_volumes_quota
+  with_items: "{{ _volumes }}"
+- debug: msg={{ set_gluster_volumes_quota }}
+
+
+- name: List Gluster Volumns Quota
+  shell: |
+    gluster volume quota {{ item.name }} list
+  register: list_gluster_volumes_quota
+  with_items: "{{ _volumes }}"
+- debug: msg={{ list_gluster_volumes_quota }}
+
+
+# If you'd like to see whole disk size even on a client, not display quota size,
+- name: Turn off "quota-deem-statfs" parameter on a GlusterFS Volume Node
+  shell: |
+    gluster volume set {{ item.name }} quota-deem-statfs off
+  register: turn_off_deem_statfs_param
+  with_items: "{{ _volumes }}"
+- debug: msg={{ turn_off_deem_statfs_param }}
+
+
+- name: List Gluster Volumns Quota
+  shell: |
+    gluster volume quota {{ item.name }} list
+  register: list_gluster_volumes_quota
+  with_items: "{{ _volumes }}"
+- debug: msg={{ list_gluster_volumes_quota }}
+
+
+- name: Set Gluster Volumns Quota Soft Limits
+  shell: |
+    gluster volume quota {{ item.name }} limit-usage {{ item.quota_dir }} {{ item.quota }} {{ item.quota_soft_limit }}
+  register: set_gluster_volumes_quota_soft_limit
+  with_items: "{{ _volumes }}"
+- debug: msg={{ set_gluster_volumes_quota_soft_limit }}
+
+
+#- name: List Gluster Volumns Quota
+#  shell: |
+#    gluster volume quota {{ item.name }} list
+#  register: list_gluster_volumes_quota
+#  with_items: "{{ _volumes }}"
+#- debug: msg={{ list_gluster_volumes_quota }}
 
