--- a/roles/gluster/tasks/pkgs/uninstall-pkgs.yml
+++ b/roles/gluster/tasks/pkgs/uninstall-pkgs.yml
@@ -7,6 +7,8 @@
   ignore_errors: true
   with_items:
     - glusterfs-server
+    - glusterfs-*
+    - libglusterfs0
 
 
 #- name: Delete Remaining oVirt Engine Directory
