--- a/roles/gluster/tasks/volume/opts/create-distribute-replicate-volumes.yml
+++ b/roles/gluster/tasks/volume/opts/create-distribute-replicate-volumes.yml
@@ -16,3 +16,19 @@
       }
   with_items: "{{ _volumes }}"
 
+
+- name: Start Gluster Volume
+  gluster_volume:
+    name: "{{ item.name }}"
+    state: started
+  register: start_volumes
+  with_items: "{{ _volumes }}"
+- debug: msg={{ start_volumes }}
+
+
+- name: Confirm Gluster Volume Info
+  shell: |
+    gluster volume info
+  register: confirm_volume_info
+- debug: msg={{ confirm_volume_info }}
+
