--- a/roles/gluster/tasks/volume/opts/create-disperse-volumes.yml
+++ b/roles/gluster/tasks/volume/opts/create-disperse-volumes.yml
@@ -8,6 +8,7 @@
     disperses: "{{ _volume_count.disperse }}"
     redundancies: "{{ _volume_count.redundant }}"
     cluster: "{{ groups['workers'] }}"
+    force: yes
     options:
       { performance.cache-size: "{{ item.perf_cache_size }}",
         write-behind: "{{ item.wb }}",
