--- a/roles/gluster/tasks/volume/opts/create-distribute-volumes.yml
+++ b/roles/gluster/tasks/volume/opts/create-distribute-volumes.yml
@@ -6,6 +6,7 @@
     bricks: "{{ item.brick }}"
     rebalance: yes
     cluster: "{{ groups['workers'] }}"
+    force: yes
     options:
       { performance.cache-size: "{{ item.perf_cache_size }}",
         write-behind: "{{ item.wb }}",
