--- a/roles/hosts/tasks/set-facts.yml
+++ b/roles/hosts/tasks/set-facts.yml
@@ -72,3 +72,18 @@
     _netdev: "ansible_{{ netdev2 }}"
     _ipaddr: "{{ ipaddr2 }}"
 
+
+- set_fact:
+    ext_repo: "crb"
+  when: ansible_distribution == "CentOS" and ansible_distribution_major_version|int >= 9
+
+
+- set_fact:
+    ext_repo: "devel"
+  when: ( ansible_distribution == "RedHat" or ansible_distribution == "Rocky" ) and ansible_distribution_major_version|int >= 9
+
+
+- set_fact:
+    ext_repo: "devel"
+  when: ( ansible_distribution == "RedHat" or ansible_distribution == "CentOS" or ansible_distribution == "Rocky" ) and ansible_distribution_major_version|int < 9
+
